# petproj

auth_service/: Cargo.toml
auth_service/deploy/: docker-compose.yml  mongo-init.js
auth_service/src/: cli_parser.rs  email_adapter.rs  lib.rs  logger.rs  main.rs  mongo_adapter.rs  redis_adapter.rs  register_routing.rs  service_state.rs
auth_service/src/tests/: auth_tests.rs  mod.rs  redis_mock.rs  register_tests.rs
auth_service/tests/: auth_tests.rs  redis_mock.rs  register_tests.rs
